// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`textSpaceCollapse renders 0 1`] = `
Array [
  .c0 {
  text-space-collapse: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-space-collapse: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-space-collapse: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-space-collapse: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`textSpaceCollapse renders function 1`] = `
Array [
  .c0 {
  text-space-collapse: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  text-space-collapse: has;
}

<div
    className="c0"
  />,
  .c0 {
  text-space-collapse: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  text-space-collapse: has;
}

<div
    className="c0"
  />,
]
`;

exports[`textSpaceCollapse renders invalid theme path 1`] = `
Array [
  .c0 {
  text-space-collapse: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-space-collapse: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-space-collapse: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-space-collapse: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`textSpaceCollapse renders negative number 1`] = `
Array [
  .c0 {
  text-space-collapse: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-space-collapse: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-space-collapse: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  text-space-collapse: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`textSpaceCollapse renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    text-space-collapse: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-space-collapse: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-space-collapse: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-space-collapse: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    text-space-collapse: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-space-collapse: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-space-collapse: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-space-collapse: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-space-collapse: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-space-collapse: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-space-collapse: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-space-collapse: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-space-collapse: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-space-collapse: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-space-collapse: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-space-collapse: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textSpaceCollapse renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    text-space-collapse: July;
  }
}

@media April {
  .c0 {
    text-space-collapse: August;
  }
}

@media January {
  .c0 {
    text-space-collapse: September;
  }
}

@media April {
  .c0 {
    text-space-collapse: November;
  }
}

@media June {
  .c0 {
    text-space-collapse: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    text-space-collapse: July;
  }
}

@media April {
  .c0 {
    text-space-collapse: August;
  }
}

@media January {
  .c0 {
    text-space-collapse: September;
  }
}

@media April {
  .c0 {
    text-space-collapse: November;
  }
}

@media June {
  .c0 {
    text-space-collapse: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-space-collapse: January;
  }
}

@media April {
  .c0 {
    text-space-collapse: December;
  }
}

@media January {
  .c0 {
    text-space-collapse: April;
  }
}

@media April {
  .c0 {
    text-space-collapse: May;
  }
}

@media June {
  .c0 {
    text-space-collapse: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-space-collapse: January;
  }
}

@media April {
  .c0 {
    text-space-collapse: December;
  }
}

@media January {
  .c0 {
    text-space-collapse: April;
  }
}

@media April {
  .c0 {
    text-space-collapse: May;
  }
}

@media June {
  .c0 {
    text-space-collapse: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textSpaceCollapse renders postitive number 1`] = `
Array [
  .c0 {
  text-space-collapse: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-space-collapse: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-space-collapse: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  text-space-collapse: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`textSpaceCollapse renders string 1`] = `
Array [
  .c0 {
  text-space-collapse: July;
}

<div
    className="c0"
  />,
  .c0 {
  text-space-collapse: July;
}

<div
    className="c0"
  />,
  .c0 {
  text-space-collapse: June;
}

<div
    className="c0"
  />,
  .c0 {
  text-space-collapse: June;
}

<div
    className="c0"
  />,
]
`;

exports[`textSpaceCollapse renders valid theme path 1`] = `
Array [
  .c0 {
  text-space-collapse: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-space-collapse: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-space-collapse: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-space-collapse: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
